samples/_failures_safe/1761456967_31c4e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6a4bfb0.c: In function ‘main’:
./samples/SAFE/__tmp_b6a4bfb0.c:179:5: error: expected identifier or ‘(’ at end of input
  179 |     for (int
      |     ^~~
./samples/SAFE/__tmp_b6a4bfb0.c:179:5: error: expected declaration or statement at end of input
